--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server"
+    "start":"node server.js"
   },
   "keywords": [],
   "author": "",
@@ -23,3 +22,4 @@
     "nodemon": "^3.1.10"
   }
 }
+
