--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,22 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/**/*",
-      "use": "@vercel/static-build"
-    },
-    {
-      "src": "server/index.js",
-      "use": "@vercel/node"
+      "src": "khatha-frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/server/index.js"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/src/index.html"
+      "dest": "/index.html"
     }
   ]
 }
